# video-extract-transcripts

./: .gitignore  README.md  extract_audio.sh  pyproject.toml  transcribe.py
