[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "silentbugs",email = "d.misdanitis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
